# Blackjack-Linux

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  blackjack.desktop.in  clickable.json  manifest.json.in
click/: blackjack.desktop  manifest.json
plugins/: CMakeLists.txt
plugins/BlackjackBackend/: CMakeLists.txt  blackjackbackend.cpp  blackjackbackend.h  playerwrapper.cpp  playerwrapper.h  plugin.cpp  plugin.h  qmldir  standingsmodel.cpp  standingsmodel.h
po/: blackjack.arc676.pot
qml/: CardView.qml  ConfirmDialog.qml  DefaultHeader.qml  GameView.qml  Main.qml  SetupView.qml  WrappingLabel.qml
src/: build.rs  libblackjack.rlib  main.rs  qrc.rs  wrappers.rs
